k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  namespace: default
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
